--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -34,10 +34,9 @@ xref:reprap#[RepRap], xref:git#[Git]
 
 |10. |4.12.2018 |xref:supports#[Tisk: Podpory] |3
 
-|11. |11.12.2018 |🚧 xref:printing#[Tisk] - xref:multicolor#[Vícebarevný tisk] |3
+|11. |11.12.2018 |xref:multicolor#[Tisk: Vícebarevný tisk] |3
 
-|12. |18.12.2018 |🚧 xref:printing#[Tisk] - co si přejete vyzkoušet
-ohledně semestrální práce |0
+|12. |18.12.2018 |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
 
 2+d|Domácí příprava vhodná k semestrálce
 |🚧 xref:meshmixer#[MeshMixer a řezání STL souborů] |0
