--- a/troubleshooting/printing.adoc
+++ b/troubleshooting/printing.adoc
@@ -40,4 +40,5 @@ Pokud si však všimnete velmi nezvyklého hluku při tisku, nebojte se přivola
 
 == Z tiskárny se kouří / hoří / je viditelně fyzicky poškozená
 
-Okamžitě upozorněte cvičícího. I pokud si nejste jistí, zda je to problém, raději přivolejte cvičícího. Nestačí se hlásit, rovnou křičte.
+Okamžitě upozorněte cvičícího. I pokud si nejste jisti, zda je to problém, raději přivolejte cvičícího. Nestačí se hlásit, rovnou křičte.
+https://www.thissmarthouse.net/dont-burn-your-house-down-3d-printing-a-cautionary-tale/[Požár tiskárny není neobvyklá věc].
