--- a/tutorials/meshmixer.adoc
+++ b/tutorials/meshmixer.adoc
@@ -1,5 +1,7 @@
-MeshMixer a řezání STL souborů
-------------------------------
+= MeshMixer a řezání STL souborů
+:toc:
+:imagesdir: ../images/meshmixer/
+:html5s-image-default-link: self
 
 Aktuální MeshMixer 3.2 najdete na http://www.meshmixer.com/[stránkách
 programu]. Existuje verze pro Windows a macOS.
@@ -12,30 +14,32 @@ počítače).
 
 Video návody jsou vytvořeny na verzi 2.9:
 
-https://www.youtube.com/watch?v=cVx1vXq8Xao[Řezání objektů v MeshMixeru]
+.https://www.youtube.com/watch?v=cVx1vXq8Xao[Řezání objektů v MeshMixeru]
+video::cVx1vXq8Xao[youtube]
 
-Cura je dostupná ve dvou variantách, já doporučuji stáhnout
+Cura je dostupná ve dvou variantách, já doporučuji stáhnout starší verzi
 https://www.lulzbot.com/cura[Cura Lulzbot Edititon] nebo
 https://ultimaker.com/en/products/cura-software/list[starší verzi
 Ultimaker Cura (15.x)] (nová verze je celá předělaná a návod nebude
 souhlasit).
 
-https://www.youtube.com/watch?v=FNOLtlEaJKA[Pokládání objektů v Cuře]
+.https://www.youtube.com/watch?v=FNOLtlEaJKA[Pokládání objektů v Cuře]
+video::FNOLtlEaJKA[youtube]
 
 Mohlo by se vám také hodit:
-https://www.youtube.com/watch?v=SiBXboixe2g[Převisy v Cuře (bez
-komentáře)] a https://www.youtube.com/watch?v=1U4MVuaSv0U[Řezání modelů
-ve Slic3ru]
 
-[[meshmixer-24]]
-MeshMixer 2.4
-~~~~~~~~~~~~~
+.https://www.youtube.com/watch?v=SiBXboixe2g[Převisy v Cuře] (bez komentáře)
+video::SiBXboixe2g[youtube]
+
+.https://www.youtube.com/watch?v=1U4MVuaSv0U[Řezání modelů ve Slic3ru]
+video::1U4MVuaSv0U[youtube]
+
+== MeshMixer 2.4
 
 Tato část návodu (bez videí) je pro velmi starou verzi MeshMixeru, ale
 vystačíte si s jedním programem.
 
-Instalace
-^^^^^^^^^
+=== Instalace
 
 MeshMixer 2.4 najdete na http://www.meshmixer.com/[stránkách programu].
 Existuje verze pro Windows a macOS. V Linuxu jde verze pro Windows
@@ -46,59 +50,58 @@ http://www.dllme.com/dll/files/prntvpt_dll.html[prntvpt.dll]. Jediný
 problém, se kterým jsme se setkali, jsou divné fonty a crash při prvním
 spuštění.
 
-image:../images/meshmixer/meshmixer1.png[Screenshot]
+image::meshmixer1.png[width=500]
 
-Řez objektem
-^^^^^^^^^^^^
+=== Řez objektem
 
-Nejprve importujte STL soubor pomocí tlačítka *Import*.
+Nejprve importujte STL soubor pomocí tlačítka _Import_.
 
-image:../images/meshmixer/meshmixer2.png[Screenshot]
+image::meshmixer2.png[width=500]
 
-Poté z nabídky *Edit* vyberte *Plane Cut*.
+Poté z nabídky _Edit_ vyberte _Plane Cut_.
 
-image:../images/meshmixer/meshmixer3.png[Screenshot]
+image::meshmixer3.png[width=500]
 
 Pomocí všelijakých šipek můžete manipulovat rovinou řezu. Můžete také
 táhnout stisknutou myš a vytvořit čáru (na obrázku červená), podél které
 se rovina přemístí, rovnoběžně s vaším pohledem. Pokud je objekt umístěn
 nepříhodně, můžete s ním rotovat pravým tlačítkem myši. Před stisknutím
-tlačítka *Accept* se ujistěte, že máte vybráno *Type: Slice*, jinak
+tlačítka _Accept_ se ujistěte, že máte vybráno _Type: Slice_, jinak
 skončíte pouze s jednou částí objektu.
 
-image:../images/meshmixer/meshmixer4.png[Screenshot]
+image::meshmixer4.png[width=500]
 
 Po provedení řezu vypadá objekt stejně jako předtím. Musíte opět z menu
-*Edit* vybrat *Separate Shells*.
+_Edit_ vybrat _Separate Shells_.
 
-image:../images/meshmixer/meshmixer5.png[Screenshot]
+image::meshmixer5.png[width=500]
 
 V modálním okně můžete vybírat, který shell bude vidět, případně na
 jakém se provádí akce (pozor, to je rozdíl, jedno řeší to očičko, druhé
 řeší jakoby zvolení a zvýraznění toho shellu v seznamu). Rovnou pro
-jeden shell vyberte z nabídky *Edit* možnost *Align*. To proto, aby
+jeden shell vyberte z nabídky _Edit_ možnost _Align_. To proto, aby
 objekt ležel na placaté části, jinak byl řez k ničemu.
 
-image:../images/meshmixer/meshmixer8.png[Screenshot]
+image::meshmixer8.png[width=500]
 
-V dialogu *Align* je vybrána ve výchozím stavu osa Y. To by snad mělo
+V dialogu _Align_ je vybrána ve výchozím stavu osa Y. To by snad mělo
 zajistit položení objektu na plocho (i když možná vzhůru nohama, k tomu
-se dostaneme), takže stačí dát *Accept*.
+se dostaneme), takže stačí dát _Accept_.
 
-image:../images/meshmixer/meshmixer9.png[Screenshot]
+image::meshmixer9.png[width=500]
 
-Z menu *File* zvolte *Export* a uložte danou část jako STL soubor.
+Z menu _File_ zvolte _Export_ a uložte danou část jako STL soubor.
 Doporučuji zkontrolovat, že jste vyexportovali správnou část (otevřením
 výsledného STL v nějakém programu).
 
-image:../images/meshmixer/meshmixer10.png[Screenshot]
+image::meshmixer10.png[width=500]
 
-Postup zopakujte pro druhou polovinu. Zde nastal případ, že *Align*
+Postup zopakujte pro druhou polovinu. Zde nastal případ, že _Align_
 otáčí objekt jinak, než chceme. Stačí kliknout na šipku (označenou
 zeleným puntíkem) a pokračovat jako u předchozí části.
 
-image:../images/meshmixer/meshmixer11.png[Screenshot]
+image::meshmixer11.png[width=500]
 
-image:../images/meshmixer/meshmixer12.png[Screenshot]
+image::meshmixer12.png[width=500]
 
-image:../images/meshmixer/meshmixer13.png[Screenshot]
+image::meshmixer13.png[width=500]
