--- a/tasks.adoc
+++ b/tasks.adoc
@@ -2,4 +2,4 @@
 
 - Zadání úloh na cvičení najdete na stránce xref:tutorials/index#[Cvičení].
 - Zadání domácího úkolu: 🐙 https://github.com/3DprintFIT/B182HW-Assignment[B182HW-Assignment]
-- Zadání semestrální práce: 🐙 Na to je ještě času dost.
+- Zadání semestrální práce: 🐙 https://github.com/3DprintFIT/B182CW-Assignment[B182CW-Assignment]
