--- a/tasks.adoc
+++ b/tasks.adoc
@@ -1,5 +1,5 @@
 = Zadání
 
 - Zadání úloh na cvičení najdete na stránce xref:tutorials/index#[Cvičení].
-- Zadání domácího úkolu: 🐙 https://github.com/3DprintFIT/B182HW-Assignment[B182HW-Assignment]
-- Zadání semestrální práce: 🐙 https://github.com/3DprintFIT/B182CW-Assignment[B182CW-Assignment]
+- Zadání domácího úkolu: 🚧 TBD
+- Zadání semestrální práce: 🚧 TBD
