Change meeting info at hlavam30 teacher page
Lol, pořád piště Mirovi, ale už to tam nemusí bejt takhle trapně napsaný.

--- a/teachers/hlavam30.adoc
+++ b/teachers/hlavam30.adoc
@@ -3,4 +3,4 @@
 * e-mail: marian.hlavac@fit.cvut.cz
 * telefon: +420 605 347 542
 * místnost: TH:A-1324
-* konzultace: _lol, radši xref:hroncmir#[napiš Mirovi]_ 😀
+* konzultace: po předchozí domluvě
