--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -12,7 +12,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |2. |25.02.2020 |xref:openscad#[OpenSCAD: Základy]
 |https://github.com/3DprintFIT/B192A-OpenSCAD1-Assignment[3]
 
-|3. |03.03.2020 |xref:openscad#[OpenSCAD: Pokročilé] |3
+|3. |03.03.2020 |xref:openscad#[OpenSCAD: Pokročilé]
+|https://github.com/3DprintFIT/B192A-OpenSCAD2-Assignment[3]
 
 |4. |10.03.2020 |xref:mesh#[Mesh] |3
 
