--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -28,7 +28,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |6. |24.03.2020 |xref:slicing#[Slicing] 
 |https://github.com/3DprintFIT/B192A-Slicing-Assignment[3] 🦠 https://www.youtube.com/watch?v=C51JWbLgJu0[live]
 
-|7. |31.03.2020 |xref:scan#[Skenování] |3 🦠
+|7. |31.03.2020 |xref:scan#[Skenování]
+|https://github.com/3DprintFIT/B192A-Scanning-Assignment[3] 🦠
 
 |8. |07.04.2020 |xref:printing#[Tisk: Základy] |3
 
