--- a/tutorials/slicing.adoc
+++ b/tutorials/slicing.adoc
@@ -11,6 +11,9 @@ Tiskovými daty pro 3D tiskárny jsou tak přesné instrukce kdy, odkud, kam a j
 
 Tisková data musíme tiskárně připravit a jedná se o netriviální úkol. Úspěšná příprava dat totiž definuje jak úspěšný výsledek tisku bude. Ve hře je mnoho faktorů, které je nutné nastavit -- rychlosti, teploty, správné pohyby, tisk struktur, které nejsou součásti 3D modelu apod.
 
+.https://www.youtube.com/watch?v=C51JWbLgJu0[Videotutoriál].
+video::C51JWbLgJu0[youtube]
+
 .Naslicovaný model chobotničky
 image::octo-layers.jpg[Vrstvy naslicovaného modelu, width=500, link=../images/slicing/octo-layers.jpg]
 
