--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -2,44 +2,41 @@
 
 Změna programu vyhrazena.
 
-WARNING: Cvičení označená symbolem 🦠 (v pravém sloupci) probíhají „korespondenčně“.
-Termín vypracování úkolu je v takovém případě 1 týden od původního data cvičení.
-V případě zájmu o konzultace nás neváhejte xref:../teachers/index#[kontaktovat].
+WARNING: Kvůli nepředvídatelnosti koronavirových opatření 🦠 nejsme schopni garantovat,
+že výuka BI-3DT bude probíhat tento semestr bez obtíží.
+Druhá polovina harmonogramu nelze učit distančně.
+**V případě zákazu prezenční výuky může být předmět zrušen bez náhrady.**
 
 [cols="s,2,4,",options="header",]
 |=======================================================================
 |Cvičení |Datum |Téma |Body
-|1. |18.02.2020 |xref:course#[Principy předmětu],
+|1. |14.02.2022 |xref:course#[Principy předmětu],
 xref:reprap#[RepRap], xref:git#[Git]
-|https://github.com/3DprintFIT/B192A-Username-Assignment[0]
+|https://github.com/3DprintFIT/B212A-Username-Assignment[0]
 
-|2. |25.02.2020 |xref:openscad#[OpenSCAD: Základy]
-|https://github.com/3DprintFIT/B192A-OpenSCAD1-Assignment[3]
+|2. |21.02.2022 |xref:openscad#[OpenSCAD: Základy] |3
 
-|3. |03.03.2020 |xref:openscad#[OpenSCAD: Pokročilé]
-|https://github.com/3DprintFIT/B192A-OpenSCAD2-Assignment[3]
+|3. |28.02.2022 |xref:openscad#[OpenSCAD: Pokročilé] |3
 
-|4. |10.03.2020 |xref:mesh#[Mesh]
-|https://github.com/3DprintFIT/B192A-Mesh-Assignment[3] 🦠
+|4. |07.03.2022 |xref:mesh#[Mesh] |3
 
-|5. |17.03.2020 |xref:admesh#[ADMesh] - Programová manipulace s meshí
-|https://github.com/3DprintFIT/B192A-ADMesh-Assignment[3] 🦠
+|5. |14.03.2022 |xref:admesh#[ADMesh] - Programová manipulace s meshí |3
 
-|6. |24.03.2020 |xref:slicing#[Slicing] 
-|https://github.com/3DprintFIT/B192A-Slicing-Assignment[3] 🦠
+|6. |21.03.2022 |xref:slicing#[Slicing] |3
 
-|7. |31.03.2020 |xref:scan#[Skenování]
-|https://github.com/3DprintFIT/B192A-Scanning-Assignment[3] 🦠
+|7. |28.03.2022 |xref:scan#[Skenování] |3
 
-|8. |termín v KOSu |xref:printing#[Tisk: Základy] |3
+|8. |04.04.2022 |xref:printing#[Tisk: Základy] |3
 
-|9. |termín v KOSu |xref:bridges#[Tisk: Mosty] |3
+|9. |11.04.2022 |xref:bridges#[Tisk: Mosty] |3
 
-|10. |termín v KOSu |xref:supports#[Tisk: Podpory] |3
+|🐤 |18.04.2022 |Velikonoční pondělí |🐇
 
-|11. |termín v KOSu |xref:multicolor#[Tisk: Vícebarevný tisk] |3
+|10. |25.04.2022 |xref:supports#[Tisk: Podpory] |3
 
-|12. |zrušeno |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
+|11. |02.05.2022 |xref:multicolor#[Tisk: Vícebarevný tisk] |3
+
+|12. |09.05.2022 |Tisk - co si přejete vyzkoušet ohledně semestrální práce |0
 
 2+d|Domácí příprava vhodná k semestrálce
 |xref:meshmixer#[MeshMixer a řezání STL souborů] |0
