--- a/apps.adoc
+++ b/apps.adoc
@@ -3,7 +3,7 @@
 Pokud chcete doma či při cvičení používat vlastní počítač, nutně budete
 potřebovat tyto programy:
 
-* http://openscad.org[OpenSCAD] 2019.05
+* http://openscad.org[OpenSCAD] 2019.05 nebo novější
 * https://github.com/3DprintFIT/netfabb-basic-download/releases[netfabb Basic]
 * https://github.com/kliment/Printrun[Printrun]
 * http://slic3r.org/[Slic3r]
@@ -41,7 +41,7 @@ http://rpmfusion.org/[RPM Fusion], jako `netfabb-basic`, respektive
 `kisslicer`
 
 Používejte podporovanou verzi Fedory, jinak budete mít staré verze
-programů. Na cvičení používáme Slic3r 1.3.0, vystačíte si i s verzí 1.2.9.
+programů.
 
 === Ostatní distribuce
 
