--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -23,7 +23,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |4. |07.03.2022 |xref:mesh#[Mesh]
 |https://github.com/3DprintFIT/B212A-Mesh-Assignment[3]
 
-|5. |14.03.2022 |xref:admesh#[ADMesh] - Programová manipulace s meshí |3
+|5. |14.03.2022 |xref:admesh#[ADMesh] - Programová manipulace s meshí
+|https://github.com/3DprintFIT/B212A-ADMesh-Assignment[3]
 
 |6. |21.03.2022 |xref:slicing#[Slicing] |3
 
