--- a/tutorials/index.adoc
+++ b/tutorials/index.adoc
@@ -29,7 +29,8 @@ xref:reprap#[RepRap], xref:git#[Git]
 |6. |21.03.2022 |xref:scan#[Skenování]
 |https://github.com/3DprintFIT/B212A-Scanning-Assignment[3]
 
-|7. |28.03.2022 |xref:slicing#[Slicing] |3
+|7. |28.03.2022 |xref:slicing#[Slicing]
+|https://github.com/3DprintFIT/B212A-Slicing-Assignment[3]
 
 |8. |04.04.2022 |xref:printing#[Tisk: Základy] |3
 
